# nlp_fairy_tales_2

./: .pre-commit-config.yaml  README.md  pyproject.toml
